# s2-map-format

./: Cargo.toml
src/: ai.rs  buildings.rs  doodads.rs  helper_structs.rs  logic.rs  main.rs  map.rs  military.rs  movement.rs  navy.rs  net.rs  player.rs  portal.rs  resources.rs  settlers.rs  transport.rs  uml_main.rs  utils.rs
