[package]
name = "s2-map-format"
version = "0.1.0"
edition = "2024"
default-run = "map_parser"

[[bin]]
name = "map_parser"
path = "src/main.rs"

[[bin]]
name = "uml"
path = "src/uml_main.rs"



[dependencies]
bilge = "0.2.0"
binrw = "0.15.0"
bounded-integer = "0.6.0"
const-crc32 = "1.3.0"
crc32fast = "1.4.2"
decryptor_s2 = "0.1.0"
derive_more = { version = "2.0.1", features = ["deref", "from", "into", "is_variant"] }
quote = "1.0.40"
simple-eyre = "0.3.1"
strum = { version = "0.27.0", features = ["derive"] }
syn = { version = "2.0.104", features = ["full", "parsing"] }
walkdir = "2.5.0"
